# tiled

./: .gitignore
scripts/: .gitignore  README.md  build_tsx.py  package_for_artists.ps1  pyproject.toml  requirements.txt  split_icons.py  start_tiled_tools_web.bat
scripts/docs/: 01_quick_start.md  02_actions.md  03_workflows.md  04_wang_2edge.md
scripts/pipelines/: 3x3_split_then_iso.yaml  3x3_split_then_iso_sheet.yaml  iso_to_topdown.yaml  make_seamless.yaml  tile_repeat_3x3.yaml  topdown_to_iso.yaml  wang_2edge_big_iso.yaml  wang_2edge_corner_set_iso_terrain.yaml  wang_2edge_set.yaml  wang_2edge_set_iso.yaml  wang_2edge_set_iso_terrain.yaml
scripts/tiled_tools/: __init__.py  __main__.py  cli.py  server.py
scripts/tiled_tools/actions/: __init__.py  brush_remap_tsx.py  build_tsx_sheet.py  canvas_square.py  convert_tmj_topdown_to_iso45.py  derive_tsx_image.py  for_each.py  gen_default_masks.py  io_load.py  io_save.py  iso45_tile_spec.py  iso_to_topdown.py  load_dir.py  make_seamless.py  mask_blend_set.py  multi_terrain_wang_set.py  pack_sheet.py  remap_tmj_gids.py  rotate.py  save_all.py  scale.py  split_3x3.py  split_connected.py  tile_repeat.py  tileset_to_iso45_matrix.py  topdown_to_iso.py  wang_2edge_compose_map.py
scripts/tiled_tools/core/: action.py  pipeline.py  registry.py
scripts/tiled_tools/docs/: 01_quick_start.md  02_actions.md  03_workflows.md  04_wang_2edge.md  05_examples.md
scripts/tiled_tools/pipelines/: 3x3_split_then_iso.yaml  3x3_split_then_iso_sheet.yaml  batch_images_to_tilesheet.yaml  (+17 more)
scripts/web/: app.js  index.html  styles.css
(+61 files in other folders)
