[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiled-tools"
version = "0.1.0"
description = "Tiled asset processing workflows with CLI and a local web UI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
]

[project.scripts]
tiled-tools = "tiled_tools.cli:main"
tiled_tools = "tiled_tools.cli:main"

[tool.setuptools]
packages = [
    "tiled_tools",
    "tiled_tools.actions",
    "tiled_tools.core",
]

[tool.setuptools.package-data]
tiled_tools = [
    "web/*.html",
    "web/*.css",
    "web/*.js",
    "docs/*.md",
    "docs/examples/**/*",
    "pipelines/*.yaml",
]
